# parkncharge

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  tmux.yml
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/parkncharge/share/parkncharge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/parkncharge/: package.xml  setup.cfg  setup.py
ros2_ws/src/parkncharge/gaz/model/: groundadded.sdf
ros2_ws/src/parkncharge/gaz/model/ackermanncar/: ackermanncar.sdf  model.config  model.sdf
ros2_ws/src/parkncharge/gaz/model/living_room/: model.config
ros2_ws/src/parkncharge/gaz/model/living_room/materials/scripts/: living_room.material
ros2_ws/src/parkncharge/gaz/model/pickup/: model.config  model.sdf
ros2_ws/src/parkncharge/gaz/model/road/: model.config  model.sdf
ros2_ws/src/parkncharge/gaz/model/white_plane/: model.config  model.sdf
ros2_ws/src/parkncharge/parkncharge/: MoveAndMonitor.py  autonomousDrive.py  controller.py  gazebo_ros_launch.py  main.py  newcontroller.py  read_odomentry.py  ros_gz_bridge.py
ros2_ws/src/parkncharge/parkncharge/Nodes/: AckermannControllerNode.py  PositionPublisherNode.py  TrajectoryPlannerNode.py
