<?xml version="1.0"?>
<package format="3">
  <name>parkncharge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="krishnan@iabg.de">krishnan</maintainer>
  <license>TODO: License declaration</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>  <!-- Include other necessary dependencies -->



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
